--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.metis</groupId>
     <artifactId>opportunity_recommendation_algorithm</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.0.0</version>
 
     <properties>
         <maven.compiler.source>21</maven.compiler.source>
@@ -47,7 +47,7 @@
         <repository>
             <id>github</id>
             <name>GitHub Packages</name>
-            <url>https://maven.pkg.github.com/ImGabreuw/opportunityResponse-recommendation-system</url>
+            <url>https://maven.pkg.github.com/ImGabreuw/opportunity-recommendation-system</url>
         </repository>
     </distributionManagement>
 
